syntax = "proto3";
package aura.smartaccount;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/aura-nw/aura/x/smartaccount/types";

// SmartAccount is a smart contract that is capable of initiating txs.
//
// This account type is similar to BaseAccount
message SmartAccount {
  option (gogoproto.goproto_getters)         = false;
  option (gogoproto.equal)                   = false;
  option (cosmos_proto.implements_interface) = "cosmos.auth.v1beta1.AccountI";

  string address        = 1;
  google.protobuf.Any pub_key = 2 [(gogoproto.jsontag) = "public_key,omitempty"];
  uint64 account_number = 3;
  uint64 sequence       = 4;
}


